--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,6 @@ main.mainContent {
     width: 80vw;
     padding: 0;
     margin: 0;
-    background-color: wheat;
     z-index: 10;
 }
 /* Black Screen */
@@ -74,7 +73,17 @@ main.mainContent {
     font-size: 15px;
     padding: 3px;
     cursor: pointer;
-    transition: all 2s ease-in-out;
+    text-transform: uppercase;
+    /* transition: all 500ms ease-in-out; */
+}
+.btnThird {
+    margin: 0.5em 0;
+    background-color: green;
+    padding: 4px 2px;
+    color: white;
+    font-size: 15px;
+    cursor: pointer;
+    text-transform: uppercase;
 }
 .inputField{
     padding: 5px;
@@ -130,10 +139,9 @@ a:hover {
     align-items: stretch;
     justify-content: space-between;
     min-width: 20vw;
-    height: 100vh;
-    min-height: 100vh;
-    background: aqua;
-    z-index: 0;
+    height: 99vh;
+    background: wheat;
+    z-index: 100;
 }
 
 #sidePanel h1 {
@@ -157,8 +165,6 @@ iframe#contentFrame {
     overflow-y: hidden;
 }
 
-/* Session Timer */
-
 
 /* Visible */
 .visible {
@@ -179,4 +185,20 @@ iframe#contentFrame {
 .subtract {
     background-color: red;
     transition: all 50ms ease-in-out;
+}
+input#enterTime {
+    cursor: pointer;
+}
+
+#welcome {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    line-height: 1.5em;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0 0 0 10%;
+    z-index: 10000;
+    color: white;
+    user-select: none;
 }
