--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,207 +1,291 @@
-*,html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    height: auto;
-    width: auto;
+*,
+html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: auto;
+  width: auto;
 }
 body {
-    box-sizing: border-box;
-    display: flex;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
 main.mainContent {
-    position: relative;
-    height: 99vh;
-    min-height: 100%;
-    width: 80vw;
-    padding: 0;
-    margin: 0;
-    z-index: 10;
+  position: relative;
+  height: 99vh;
+  min-height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  z-index: 10;
 }
 /* Black Screen */
 
-.blackScreen::after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,1);
-    z-index: 1000;
+.blackScreen::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 1);
+  z-index: 1000;
 }
 /* Button Style */
 .btnPrime {
-    padding: 5px 11px;
-    margin: 5px auto;
-    cursor: pointer;
-    background-color: green;
-    color: white;
-    font-size: 16px;
+  padding: 5px 11px;
+  margin: 5px auto;
+  cursor: pointer;
+  background-color: green;
+  color: white;
+  font-size: 16px;
 }
-.circleBtn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    margin: 5px auto;
-    border-radius: 50%;
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
-    text-align: center;
-    text-justify: center;
-    transition: all 2s ease-in-out;
-    
+.circleBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  margin: 5px auto;
+  border-radius: 50%;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  text-align: center;
+  text-justify: center;
+  transition: all 2s ease-in-out;
 }
 .circleBtn:hover {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: rotate(180deg);
-    background-color:rgb(0, 77, 0);
-    box-shadow: inset;
-    transition: all 500ms ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: rotate(180deg);
+  background-color: rgb(0, 77, 0);
+  box-shadow: inset;
+  transition: all 500ms ease-in-out;
 }
 .btnSecond {
-    background-color: blue;
-    color: white;
-    font-size: 15px;
-    padding: 3px;
-    cursor: pointer;
-    text-transform: uppercase;
-    /* transition: all 500ms ease-in-out; */
+  background-color: blue;
+  color: white;
+  font-size: 15px;
+  padding: 3px;
+  cursor: pointer;
+  text-transform: uppercase;
+  /* transition: all 500ms ease-in-out; */
 }
 .btnThird {
-    margin: 0.5em 0;
-    background-color: green;
-    padding: 4px 2px;
-    color: white;
-    font-size: 15px;
-    cursor: pointer;
-    text-transform: uppercase;
+  margin: 0.5em 0;
+  background-color: green;
+  padding: 4px 2px;
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+  text-transform: uppercase;
 }
-.inputField{
-    padding: 5px;
-    margin: auto;
-    max-width: 100%;
+.inputField {
+  padding: 5px;
+  margin: auto;
+  width: 100%;
+  max-width: 100%;
 }
 .showInput {
-    flex-direction: column;
-    justify-content: center;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 ul#navList {
-    display: flex;
-    gap: 1em;
-    padding: 1em .5em;
-    flex-direction: column;
+  display: flex;
+  gap: 1em;
+  padding: 1em 0.5em;
+  flex-direction: column;
 }
 li {
-    list-style: none;
+  list-style: none;
+  min-width: 150px;
 }
 li a {
-    text-transform: uppercase;
-    text-decoration: none;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 a {
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bolder;
-    font-weight: 400;
-    color: black;
-    transition: all 300ms ease-in-out;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 400;
+  color: black;
+  transition: all 300ms ease-in-out;
 }
 a:hover {
-    color: rgb(158, 0, 58);
-    transform: scale(1.2);
-    font-weight: 900;
-    text-shadow: 4px 4px 2px white;
-    transition: all 100ms ease-in-out;
+  color: rgb(158, 0, 58);
+  font-weight: 900;
+  text-shadow: 4px 4px 2px white;
+  transition: all 100ms ease-in-out;
 }
 .flex {
-    display: flex;
-    flex-direction: column;
-    height: fit-content;
-    transition: all 500ms ease-in-out;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  transition: all 500ms ease-in-out;
+}
+div.buttonGroup {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px 0;
+  flex-wrap: wrap;
+  width: auto;
+  gap: 5px;
+}
+.buttonGroup > button {
+  flex: 1 1 auto;
+  text-align: center;
+}
+#addURL {
+  width: 100%;
 }
 /* Side Panel Stlye */
 #sidePanel {
-    position: relative;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: space-between;
-    min-width: 20vw;
-    height: 99vh;
-    background: wheat;
-    z-index: 100;
+  position: relative;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+  min-width: clamp(25vw, 25%);
+  height: 99vh;
+  background: wheat;
+  z-index: 100;
+  user-select: none;
 }
 
 #sidePanel h1 {
-    text-align: center;
+  text-align: center;
 }
 /* Timer Session */
 #timerSession {
-    z-index: 1000;
-    display: flex;
-    flex-direction: column;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+}
+div#sessionTimer h3 {
+  color: black;
 }
 #timeWindow {
-    text-align: center;
+  text-align: center;
 }
 
 /* iFrame */
 iframe#contentFrame {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    overflow-y: hidden;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
 }
-
 
 /* Visible */
 .visible {
-    visibility: visible;
-    height: 100%;
-    width: 100%;
+  visibility: visible;
+  height: 100%;
+  width: 100%;
 }
 .hidden {
-    visibility: hidden;
-    height: 0;
-    width: 0;
+  visibility: hidden;
+  height: 0;
+  width: 0;
 }
 /* Add/Substract */
 .add {
-    background-color: green;
-    transition: all 50ms ease-in-out;
+  background-color: green;
+  transition: all 50ms ease-in-out;
 }
 .subtract {
-    background-color: red;
-    transition: all 50ms ease-in-out;
+  background-color: red;
+  transition: all 50ms ease-in-out;
 }
 input#enterTime {
-    cursor: pointer;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+  padding: 3px;
+  text-align: center;
+  font-weight: 600;
 }
 
 #welcome {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    line-height: 1.5em;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 0 0 0 10%;
-    z-index: 10000;
-    color: white;
-    user-select: none;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.5em;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 0 0 10%;
+  z-index: 10000;
+  color: white;
+  user-select: none;
 }
 #welcome span {
-    color: red;
+  color: red;
+}
+
+/* Weather API  */
+#weatherWindow {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  height: auto;
+  width: 100%;
+  margin: auto 0;
+  text-align: center;
+}
+
+/* Art Window */
+#artWindow {
+    position: absolute;
+    width: 100%;
+    min-width: auto;
+    height: 100%;
+    background-color: white;
+    /* z-index: 10000; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 auto;
+}
+
+#artImage {
+  display:flex;
+  /* background: blue; */
+  border: 3px solid black;
+  min-height: auto;
+  min-width: 3%;
+  max-width: 80vw;
+  padding: 1em;
+  margin: 2em 10em 1em 10em;
+  background-position: center cover;
+  background-repeat: none;
+  
+}
+#artInfo {
+  display: flex;
+  flex-direction: column;
+  color: black;
+  gap: .5em;
+  max-width: 950px;
+  margin-bottom: 15px;
+  padding: 1em 2em;
+  font-size: 18px;
+  font-family: 'Times New Roman', Times, serif;
+  min-height: fit-content;
+  height: auto;
+
+}
+#artTitle, #artist {
+  color: black;
 }
